--- a/src/shotgunEventDaemon.conf.example
+++ b/src/shotgunEventDaemon.conf.example
@@ -66,14 +66,14 @@ max_event_batch_size = 500
 # Shotgun connection options for the daemon
 
 # The Shotgun url the event processing framework should connect to.
-server: https://yoursite.shotgunstudio.com
+server:
 
 # The Shotgun script name the framework should connect with.
-name: shotgunEventDaemon
+name: redesign_event_daemon
 
 # The Shotgun api key the framework should connect with. You'll need to replace
 # this random useless key with the one corresponding to the script you've setup.
-key: 841c9a51bf45e1872c3e5f2435dade67458bc858
+key:
 
 # The address of the proxy server used to connect to your Shotgun server
 # in the format 111.222.333.444:8080. Leave this empty if you don't have
@@ -94,7 +94,7 @@ use_session_uuid: True
 
 # A comma delimited list of paths where the framework should look for plugins to
 # load.
-paths: /usr/local/shotgun/events-sample/plugins
+paths: /usr/local/shotgun/events-aa/plugins
 
 
 [emails]
